# ir-client

./: .gitignore  LICENSE  Makefile  pyproject.toml
.github/workflows/: build.yml  release.yml  run-tests.yml
ir_client/: __init__.py  endpoint_parameters.py  endpoint_types.py  exceptions.py  iracing_client.py  session_parameters.py
ir_client/cars/: mappers.py  models.py
ir_client/laps/: mappers.py  models.py
ir_client/series_race_results/: mappers.py  models.py
ir_client/subsession_results/: mappers.py  models.py
ir_client/utils/: collections.py  datetime_utils.py  enum_utils.py  iterutils.py  url_utils.py
test_resources/: home.html
tests/cars/: test_mappers.py
tests/laps/: test_mappers.py
tests/series_race_results/: test_mappers.py
tests/subsession_results/: test_mappers.py
