[tool.poetry]
name = "ir-client"
version = "0.1.6"
description = "Library to access the iRacing web API"
authors = ["Sascha Lamp <sascha@lamp-online.de>"]
license = "MIT License"
packages = [{include = "ir_client"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
assertpy = "^1.1"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "integration"
]

python_files = "test*.py it_*.py"
python_classes = "Test IntegrationTest"
python_functions = "test_* it_*"
